frontend/src/assets/css/manager/NewOrder.module.css
.main {
  height: calc(100% - 38px);
  direction: rtl;
  margin: 36px 43px 0 53px;
  overflow-y: auto;
}

.main::-webkit-scrollbar {
  width: 0;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 25px;
}

.title {
    /* width: 410px; */
    padding: 10px 0 ;
  font-size: 28px;
  font-weight: 500;
  line-height: 37px;
  font-family: "IBM Plex Sans Hebrew";
  font-style: normal;
  letter-spacing: 0px;
  color: #082a3a;
  margin-left: 32px;
}

.categories {
  /* min-height: 140px; */
  height: auto;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  /* align-items: center; */
  justify-content: flex-end;
  overflow-x: hidden;
  overflow-y: hidden;
}

.categories::-webkit-scrollbar {
  width: 0;
}

.body {
  /* height: calc(100% - 200px); */
  overflow-y: auto;
  overflow-x: hidden;
}

.body::-webkit-scrollbar {
  width: 0;
}

/* .products{
    width: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    height: 100%;
} */

.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 25px;
  height: 69px;
}

.wizard {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 89px;
  background: #ffffff 0% 0% no-repeat padding-box;
  box-shadow: 0px -3px 14px #082a3a36;
  z-index: 2;
}

.popupOverlay {
  direction: rtl;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.popup {
  background: white;
  padding: 20px;
  border-radius: 8px;
  text-align: center;
}

.popup p{
  font-size: 20px;
  margin-bottom: 20px;
}

.popup button {
  margin: 10px;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
}

.continueOrderBtn{
  background: #be955d;
  color: white;
  border: none;
  border-radius: 8px;
}
.newOrderBtn{
  background: #082a3a;
  color: white;
  border: none;
  border-radius: 8px;
}

